src/objects/fc_csc__Invoice_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Adjustment_Date__c</fullName>
        <label>Adjustment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Adjustment_Number__c</fullName>
        <externalId>true</externalId>
        <label>Adjustment Number</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fc_csc__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Zuora_Id__c</fullName>
        <externalId>true</externalId>
        <label>Zuora Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice Adjustment</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Invoice Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>